# noteist

./: .editorconfig  LICENSE.md  README.md  justfile  main.go  pyproject.toml  todoist_report.py
.github/workflows/: lint.yml  release.yml
src/noteist/: __init__.py  add_app.py  cli.py  todoist_client.py
