[project]
name = "todoist-report"
version = "0.1.0"
description = "A script to get a list of completed tasks in a project in Markdown format."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "environs>=14.2.0",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
