[project]
name = "noteist"
version = "0.1.0"
description = "Output a Markdown formatted report of completed tasks in Todoist."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[project.scripts]
noteist = "noteist.cli:cli"
