[project]
name = "noteist"
version = "0.3.1"
description = "Output a Markdown formatted report of completed tasks in Todoist."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.4",
    "toml>=0.10.2",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "Development Status :: 3 - Alpha"
]
[project.urls]
Source = "https://github.com/epicserve/noteist"
Documentation = "https://github.com/epicserve/noteist"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[project.scripts]
noteist = "noteist.cli:cli"
